--- a/NLPForFinance_Section1.ipynb
+++ b/NLPForFinance_Section1.ipynb
@@ -1079,7 +1079,7 @@
         "id": "NCLdQ6pfFHJd"
       },
       "source": [
-        "Try running your code to test your model! Call your `predict()` function, passing in your previously initialized `test_sentences`, `test_labels`, `train_vectorizer`, and `model` from above. Save the predicitions and accuracy result in variables named `y_predictions` and `test_accuracy`. Print the accuracy results to assess your performance!"
+        "Accuracy"
       ]
     },
     {
